# kata

./: .gitignore  Readme.md  clean.sh
ARM/: .gitignore
ARM/c++_class/: Android.mk  main.cpp
ARM/c++_stl/: main.cpp
ARM/c++_stl/jni/: Application.mk
ARM/for/: main.c
ARM/hello_world/: Android.mk  Makefile  hello_world.c
ARM/if_else/: main.c
ARM/switch/: Android.mk  main.c
ARM/while/: Android.mk  main.c
Algorithm/: Readme.md
Algorithm/leetcode/1171/: Makefile  main.c
Algorithm/rb_tree/: README.md  README.org  main.py  rb_draw.py  rb_node.py  rb_tree.py  test.case
Android/AcitivityLifeCycleTest/: gradle.properties
Android/AcitivityLifeCycleTest/app/: build.gradle  proguard-rules.pro
Android/ActivityTest/app/: build.gradle
Android/HelloWorld/app/: build.gradle
Android/MyApplication/: gradle.properties
Android/MyApplication/app/: build.gradle
Android/binder/: README.md  file.tree
Android/binder/BinderSample/: .gitignore
Android/protobuftest/app/: build.gradle
Android/weiqing/IACTest3/: Android.mk
C++/grammer/obj_life/: obj_life.cpp
C++/leetcode/Two_Sum/: main.cpp
C++/stl/: vectdemo.cpp
C/c_pointer_programmer/: main  v1.c  v2
C/flappy_bird_c/: cscope.files  tags
C/heap_stack/: case1.c
Compiler/elf_simple/: Makefile  SimpleSection.c  SimpleSection.hexdump  SimpleSection.objdump  SimpleSection.txt  a.c  ab  b.c  elf_demo.xlsx
K_R/1_1/: main
K_R/1_2/: main
Language/assemble/aarch64/: .gdbinit  Makefile  hello.s
Language/assemble/arm64/: Makefile  test1.s  test_mov.c  test_mov.s  test_sbc.c
Language/assemble/c_inline_asm/: Makefile  test1.c  test1.s  test2  test2.c  test2.s  test3.c  test3.s  test4  test4.c  test4.s  test5  test5.c  test5.s  test6  test6.c  test6.s  test7  test7.c  test7.s  test8  test8.c  test8.s
Language/c/GNU_GCC/: 1.语句表达式.c  2.typeof.c  3_零长数组.c  4_case范围.c  5_标号元素.c  6_可变参数宏.c  7_函数属性.c  8_变量属性和类型属性.c  9_内建函数const.c  README.md
Language/c/hw/soft_interrupt/src/: CMakeLists.txt  main.c  softinterrupt.c  softinterrupt.h
Language/c/leetcode/: 131.c
Language/rust/rust_first_class/httpie/: Cargo.toml
Linux_driver/cdev1/: hello.c
Linux_driver/kobject/: Makefile  my_kobject.c
Linux_kernel/list_head/: list_head.c  list_head.h
Linux_kernel/process_schedue/: Makefile  api.c  api.h  main.c  process_manager.c  tags
Linux_system/list_head/: list_head.c  list_head.h
Linux_system/process_schedue/: Readme.md  api.c  api.h  basic.h  main.c  process_manager.c  process_manager.h  tags  test.c  test.h
Linux_tool/: .Xmodmap
MBTI/: MBTI介绍.md  MBTI测试题.md  我的MBTI测试结果.md
Makefile/temp/: foo.c
assemble/arm64/: .gdbinit  Makefile  a.dump  main.S  test2.c  test_sbc.s
book/人生得遇苏东坡/: 01_关于这本书.md  02_苏东坡的人生轨迹.md  03_黄州岁月.md  04_核心感悟.md  05_这本书给我的启示.md  06_摘录与金句.md  07_苏轼的家人.md  08_苏轼的朋友师长.md  09_苏轼与政敌的和解.md  10_总结.md  README.md
c++/stl/: accum.cpp  insert.cpp  outiter.cpp
c/dlopen/: func.c  main
c/fork/: fork_test_1  fork_test_1.c  fork_test_2  fork_test_2.c  fork_test_3  fork_test_3.c
c/glibc_malloc/: main.c
c/integer_overflow/: integer_overflow_check.c
c/little-big-endian/: main.c
c/memory/: example-2_2.c
c/so_search_str/: Makefile  func.c  main.cpp
compile_tool/cmake/: .gitignore  clean.sh
compile_tool/cmake/Cmake的应用与实践/00_basic/: CMakeLists.txt  README.md
compile_tool/cmake/Cmake的应用与实践/02_simple_example_lib/: CMakeLists.txt
compile_tool/cmake/Cmake的应用与实践/03_simple_example_lib/: CMakeLists.txt
compile_tool/cmake/Cmake的应用与实践/04_simple_example_lib_outside/: CMakeLists.txt
compile_tool/cmake/Cmake的应用与实践/04_simple_example_lib_outside/lib/: CMakeLists.txt  test.c
compile_tool/cmake/Cmake的应用与实践/05_example_lib_find_package_module/: CMakeLists.txt
compile_tool/cmake/Cmake的应用与实践/05_example_lib_find_package_module/cmake/: Findtest_LIBRARY.cmake
compile_tool/cmake/Cmake的应用与实践/05_example_lib_find_package_module/lib/: CMakeLists.txt
compile_tool/cmake/Cmake的应用与实践/06_example_lib_find_package_cofig/: CMakeLists.txt
compile_tool/cmake/Cmake的应用与实践/06_example_lib_find_package_cofig/lib/: CMakeLists.txt
driver/: .ycm_extra_conf.py
driver/cdev1/: Makefile
flappy_bird_c/: flappy_bird  flappy_bird.c
k_r/1_2/: main.c
memroy/: example-2_3.c  example-2_4.c  example-2_5.c
nodejs/: README.md  helloworld.js
nodejs/01_firstApp/: server.js
nodejs/05_callback/: block.js  nonblock.js
nodejs/06_eventdriven/: README.md  main.js
nodejs/07_eventemitter/: event.js  main.js
nodejs/09_stream/: pipe.js  read.js  write.js
nodejs/10_module/: README.md  hello.js  hello2.js  main.js
nodejs/12_router/: index.js  router.js  server.js
nodejs/13_global/: main.js
nodejs/14_utils/: util_inherits.js  util_inspect.js
nodejs/15_fileSystem/: file.js  openfile.js  truncate.js  writefile.js
nodejs/16_get_post/: get.js  post.js
nodejs/18_web/: client.js  server.js
nodejs/19_express/: express_cookie.js  express_demo.js  express_get.js  express_post.js  express_route.js  express_static.js  get_index.htm  package.json  post_index.htm
nodejs/20_restful/: server.js
nodejs/21_multiprocess/: exec.js  fork.js  spawn.js  support.js
nodejs/24_mongodb/: main.js
python/: test.py
python/classmethod/: classmethod_1.py  my_mapreduce_2.py  test_1.py  test_2.py
python/const/: mario_const.py
python/copy/: assign.py  deep_copy.py  shallow_copy.py  test.py
python/dict/: dict_1.py
python/generator/: generator_2.py  generator_fib.py  generator_iter_basic.py
python/json/: json_ValueError.py
python/property/: property_1.py  property_2.py
python/python_web_server/: webserver1.py  webserver2.py
python/select/: server.py
python/signal/: signal_1.py
python/timer/: timer_1.py  timer_2.py
python/vul_whitebox/: block_test.py
python_web_server/: README.md  webserver1.py  webserver3g.py
tina/: MaxPathGame  MaxPathGame.c  SeqStack.c  printTest.c  test.c
wiznote_extracted/: background-wrapper.js  background.js  manifest.json  popup.html
wiznote_extracted/clip_result/: ClipResult.js  loader.js
wiznote_extracted/scripts/: ClientClipper.js  ContentVeil.js  PageInfo.js  Preview.js
(+1029 files in other folders)
