PROJECT_VERSION(1.0)

# 基本常用指令

# OPTION()
# 变量默认值

# ADD_CUSTOM_COMMAND
# ADD_CUSTOM_TARGET

# ADD_DEPENDENCIES
# 指定依赖关系

# INSTALL
# 安装

# TARGET_INCLUDE_DIRECTORIES
# interface、public、private

# SET_TARGET_PROPERTIES

# ADD_TEST/ENABLE_TESTING
# make test

# MESSAGE: 打印

# ---------------------

# 常用变量

# CMAKE_INSTALL_PREFIX: install路径
# $ENV{HOME}
# PROJECT_NAME
# <PKG>_INCLUDE_DIR: 包头文件全路径
# <PKG>_LIBRARIES: 库文件全路径
# PROJECT_SOURCE_DIR: 构建工程全路径
# CMAKE_VERSION
# CMAKE_SOURCE_DIR: 源码树顶层目录
# CC